# solar-bot

./: Cargo.toml
src/: main.rs
